<?xml version="1.0" encoding="utf-8"?>

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    
    <string name="app_name_main">Bluetooth Poker</string>
    <string name="ServerBtn">Make me the table</string>
    <string name="ClientBtn">Make me the hand</string>
    <string name="title_activity_server">Table</string>
    <string name="title_activity_client">Hand</string>
    <string name="callBtn">Call</string>
    <string name="raiseBtn">Raise</string>
    <string name="foldBtn">Fold</string>
    <string name="userCard1">User Card 1</string>
    <string name="userCard2">User Card 2</string>
    <string name="title_activity_raise">Raise</string>
    <string name="title_activity_fold">Fold</string>
    <string name="currenBet">Current Bet: $0</string>
    <string name="resetBet">Clear Bet</string>
    <string name="confirmBet">Confirm Bet</string>
    <string name="chip1">Chip 1</string>
    <string name="chip5">Chip 5</string>
    <string name="chip10">Chip 10</string>
    <string name="chip25">Chip 25</string>
    <string name="chip100">Chip 100</string>
    <string name="defaultPot">$0</string>
    
    <!--  BluetoothChat -->
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting..</string>
    <string name="title_connected_to">connected to <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_not_connected">not connected</string>

    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices..</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="secure_connect">Connect a device - Secure</string>
    <string name="insecure_connect">Connect a device - Insecure</string>
    <string name="discoverable">Make discoverable</string>    
    
    <string name="app_name">BluetoothSPP</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="pushbutton1">Push Me</string>
    <string name="up_button">Bet</string>
    <string name="right_button">Quit</string>
    <string name="down_button">Fold</string>
    <string name="left_button">Check</string>
    <string name="submit">Submit</string>
    <string name="serversend">serversend</string>

</resources>
