<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1080"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ClientActivity" >

    <Button
        android:id="@+id/callBtn_client"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#fff"
        android:textSize="28sp"
        android:text="@string/callBtn" />

    <Button
        android:id="@+id/raiseBtn_client"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/callBtn_client"
        android:layout_below="@+id/callBtn_client"
        android:textColor="#fff"
        android:textSize="28sp"
        android:text="@string/raiseBtn" />

    <Button
        android:id="@+id/foldBtn_client"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/raiseBtn_client"
        android:layout_below="@+id/raiseBtn_client"
        android:textColor="#fff"
        android:textSize="28sp"
        android:text="@string/foldBtn" />

    <ImageView
        android:id="@+id/cardView1_client"
        android:contentDescription="@string/userCard1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/foldBtn_client"
        android:layout_alignParentBottom="true"
        android:src="@drawable/bc" />

    <ImageView
        android:id="@+id/cardView2_client"
        android:contentDescription="@string/userCard2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/cardView1_client"
        android:src="@drawable/bc" />

</RelativeLayout>
