<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1080"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ServerActivity" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
		<LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_weight=".2"
	            android:gravity="center_horizontal" >

			<TextView
			    android:id="@+id/textView1"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="Current pot: "
			    android:textColor="@android:color/white"
			    android:textAppearance="?android:attr/textAppearanceLarge" />

			<TextView
			    android:id="@+id/currentPot"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/defaultPot"
			    android:textColor="#ffff00"
			    android:layout_marginBottom="10dp"
			    android:textAppearance="?android:attr/textAppearanceMedium" />
		    	
    	</LinearLayout>
		    
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="140dp"
            android:layout_weight=".9" >

            <ImageView
                android:id="@+id/cardView1_server"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/chip1"
                android:padding="2dp"
                android:src="@drawable/bc" />

            <ImageView
                android:id="@+id/cardView2_server"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/chip5"
                android:padding="2dp"
                android:src="@drawable/bc" />

            <ImageView
                android:id="@+id/cardView3_server"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/chip10"
                android:padding="2dp"
                android:src="@drawable/bc" />

            <ImageView
                android:id="@+id/cardView4_server"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/chip5"
                android:padding="2dp"
                android:src="@drawable/bc" />

            <ImageView
                android:id="@+id/cardView5_server"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/chip10"
                android:padding="2dp"
                android:src="@drawable/bc" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="85dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_weight=".3" >

            <LinearLayout
                android:id="@+id/p1_info"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/user1_server"
                    android:layout_width="wrap_content"
                    android:layout_height="55dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/chip10"
                    android:padding="2dp"
                    android:src="@drawable/nopicuser" />

                <TextView
                    android:id="@+id/p1DetailInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="8sp"
                    android:textColor="@android:color/white"
                    android:text="Current Bet: $10\nPlayer:1" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/p2_info"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/user2_server"
                    android:layout_width="wrap_content"
                    android:layout_height="55dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/chip10"
                    android:padding="2dp"
                    android:src="@drawable/nopicuser" />
                
                <TextView
                    android:id="@+id/p2DetailInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="8sp"
                    android:textColor="@android:color/white"
                    android:text="Current Bet: $10\nPlayer:2" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/p3_info"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/user3_server"
                    android:layout_width="wrap_content"
                    android:layout_height="55dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/chip10"
                    android:padding="2dp"
                    android:src="@drawable/nopicuser" />
                
                <TextView
                    android:id="@+id/p3DetailInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="8sp"
                    android:textColor="@android:color/white"
                    android:text="Current Bet: $10\nPlayer:3" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/p4_info"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/user4_server"
                    android:layout_width="wrap_content"
                    android:layout_height="55dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/chip10"
                    android:padding="2dp"
                    android:src="@drawable/nopicuser" />
                
                <TextView
                    android:id="@+id/p4DetailInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="8sp"
                    android:textColor="@android:color/white"
                    android:text="Current Bet: $10\nPlayer:4" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/p5_info"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/user5_server"
                    android:layout_width="wrap_content"
                    android:layout_height="55dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/chip10"
                    android:padding="2dp"
                    android:src="@drawable/nopicuser" />
                
                <TextView
                    android:id="@+id/p5DetailInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="8sp"
                    android:textColor="@android:color/white"
                    android:text="Current Bet: $10\nPlayer:5" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/p6_info"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/user6_server"
                    android:layout_width="wrap_content"
                    android:layout_height="55dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/chip10"
                    android:padding="2dp"
                    android:src="@drawable/nopicuser" />
                
                <TextView
                    android:id="@+id/p6DetailInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="8sp"
                    android:textColor="@android:color/white"
                    android:text="Current Bet: $10\nPlayer:6" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/p7_info"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/user7_server"
                    android:layout_width="wrap_content"
                    android:layout_height="55dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/chip10"
                    android:padding="2dp"
                    android:src="@drawable/nopicuser" />
                
                <TextView
                    android:id="@+id/p7DetailInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="8sp"
                    android:textColor="@android:color/white"
                    android:text="Current Bet: $10\nPlayer:7" />

            </LinearLayout>
        
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
